# program2project1

./: CMakeLists.txt  LICENSE  README.md  SourceMain.c  common.h  common_cli_windows.h  date.h  date_validate.h  file_ops.h  menu_1_mantenimiento.h  menu_2_operaciones.h  menu_3_consultas.h  paquete.h  paquete_validate.h  persona.h  persona_validate.h  sucursal.h  sucursal_validate.h  utils.h
